# pyMolDyn

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  build-flags  conda_requirements.txt  pyproject.toml  requirements.txt  setup.py  shallow-appify.py
.github/workflows/: pre-commit.yml
data/: test.batch
doc/: Makefile  algorithm.rst  calculation.rst  conf.py  control.rst  data.rst  domains.tex  file.rst  generate_rdf_kernel_plots.py  index.rst  master.tex  packages.tex  visualization.rst  volumes.rst  volumes.tex
doc/refactor/: Makefile  calculation.tex  checklist.tex  control.tex  data.tex  file.tex  hdf5file.tex  master.tex  sequence.tex  visualization.tex
example_data/: GST_111_128_bulk.xyz  GST_111_168_Te_surf.xyz  GST_111_196_bulk.xyz  calc_angels.py  hexagonal.xyz  snap_1100.xyz  snap_1300.xyz  snap_900.xyz  structure_c.xyz  xyz_generate.py
examples/: Makefile
examples/md-base/: Makefile  list.example.c  list_2d_3d.example.c  logging.example.c  map.example.c  shared.example.c  stacktrace.example.c
lib/: Makefile
lib/md-base/: Makefile  logging.c  logging.h  macros.h  marching_cubes.c  marching_cubes.h  mdbase.h  shared.h  version.c  version.h
packaging/: Makefile
packaging/linux/: Makefile  _get_version.py  create_package.sh
packaging/mac_os_x/: Makefile  conda_requirements.txt
pymoldyn/: _version.py
pymoldyn/cli/: __init__.py  cli.py
pymoldyn/config/: configobj.py  configuration.py  cutoff_history.py  cutoff_presets.py  validate.py
pymoldyn/core/: bonds.py  control.py  data.py  elements.py  file.py  volumes.py
pymoldyn/gui/: __init__.py  cutoff_history_table.py  gl_stack.py  (+9 more)
shallow-appify/: shallow-appify.py
src/: Makefile  __main__.py  _version.py  cTriangulate.py  calculation.py  gyrationtensor.py  pyproject.toml  setup.py  startBatch.py  startGUI.py  test.py  triangulate.py  visualization.py  volumes.py
todo/: Makefile  master.tex  todo.tex
xyz/: GST_111_128_bulk.xyz  GST_111_168_Te_surf.xyz  GST_111_196_bulk.xyz  calc_angels.py  hexagonal.xyz  snap_1000.xyz  structure_c.xyz  xyz_generate.py
(+213 files in other folders)
